--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,12 +19,14 @@
   },
   "plugins": ["react", "react-hooks"],
   "rules": {
+    "comma-dangle": "off",
     "import/prefer-default-export": "off",
     "no-console": "off",
-    "comma-dangle": "off",
-    "quotes": ["error", "double"],
     "object-curly-newline": "off",
+    "quotes": ["error", "double"],
+    "react-hooks/exhaustive-deps": "warn",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-fragments": "off"
   }
 }
