--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@patternfly/patternfly": "^2.71.6",
+    "@patternfly/react-charts": "^5.3.21",
     "@patternfly/react-core": "^3.158.1",
     "@patternfly/react-icons": "^3.15.17",
     "@patternfly/react-styles": "^3.7.14",
@@ -55,6 +56,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-router-last-location": "^2.0.1"
+    "react-router-last-location": "^2.0.1",
+    "victory": "^34.3.8"
   }
 }
