--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@patternfly/react-core": "^3.158.1",
     "@patternfly/react-icons": "^3.15.17",
     "@patternfly/react-styles": "^3.7.14",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
