--- a/package.json
+++ b/package.json
@@ -1,64 +1,60 @@
 {
-  "name": "faucon",
-  "version": "0.0.1",
-  "description": "From complex And UnCertain data to Open source intelligeNce",
+  "name": "faucon-new-app",
+  "version": "1.0.0",
+  "description": "Faucon web app",
   "main": "index.js",
+  "engines": {
+    "node": "^14"
+  },
+  "type": "module",
   "scripts": {
-    "start": "npm run build && node src/server/index.js",
-    "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "server": "nodemon src/server/index.js",
+    "start": "node server/index.cjs",
+    "client": "webpack serve --hot",
+    "server": "nodemon ./server/index.cjs",
     "build": "webpack --mode production",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "keywords": [
-    "faucon",
-    "data"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/faucon-consortium/faucon-web-app.git"
-  },
   "author": "Anastasios Doumoulakis",
-  "license": "TBD",
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "concurrently": "^5.1.0",
-    "css-loader": "^3.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
-    "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.2.0",
-    "nodemon": "^2.0.3",
-    "prettier": "^2.0.5",
-    "style-loader": "^1.1.4",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
-  },
+  "license": "ISC",
   "dependencies": {
-    "@patternfly/patternfly": "^2.71.6",
-    "@patternfly/react-charts": "^5.3.21",
-    "@patternfly/react-core": "^3.158.1",
-    "@patternfly/react-icons": "^3.15.17",
-    "@patternfly/react-styles": "^3.7.14",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@patternfly/patternfly": "^4.132.2",
+    "@patternfly/react-charts": "^6.15.20",
+    "@patternfly/react-core": "^4.152.4",
+    "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
-    "react-router-last-location": "^2.0.1",
-    "victory": "^34.3.8"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "victory": "^36.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.4",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.4.0",
+    "react-refresh": "^0.9.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.52.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
