--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "style-loader": "^3.2.1",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "webpack-dev-server": "^4.2.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
