--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "react/no-array-index-key": "off",
     "import/prefer-default-export": "off",
     "node/no-unpublished-require": "off",
-    "import/no-extraneous-dependencies" : "off"
+    "import/no-extraneous-dependencies" : "off",
+    "node/no-extraneous-import": "off"
   }
 }
