--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@patternfly/patternfly": "^4.132.2",
     "@patternfly/react-charts": "^6.15.20",
     "@patternfly/react-core": "^4.152.4",
+    "@patternfly/react-table": "^4.30.3",
     "concurrently": "^6.2.1",
     "express": "^4.17.1",
     "prop-types": "^15.7.2",
