--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@patternfly/react-core": "^4.152.4",
     "@patternfly/react-table": "^4.30.3",
     "concurrently": "^6.2.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.0.8",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
